# api/controller/interfaces.go
@@ -9,7 +9,7 @@ import (
 type (
 	UserUsecase interface {
 		Login(ctx context.Context, req domain.User) (domain.Login, error)
-		RefreshToken(ctx context.Context, token string) (domain.Login, error)
+		RefreshToken(ctx context.Context, req domain.RefreshTokenRequest) (domain.Login, error)
 		CreateUser(ctx context.Context, req domain.User) error
 		GetUserByID(ctx context.Context, userID string) (domain.UserProfile, error)
 		Logout(ctx context.Context, refreshToken string) error
